content/boundary/v0.14.x/content/docs/commands/roles/update.mdx
---
layout: docs
page_title: roles update - Command
description: |-
  The "roles update" command lets you update an existing role.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# roles update

Command: `roles update`

The `roles update` command lets you update an existing role.

## Example

This example updates a role with the ID `r_1234567890` to add the name `devops` and the description `Role for DevOps`:

```shell-session
$ boundary roles update -id r_1234567890 -name "devops" -description "Role for DevOps"
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary roles update [options] [args]
```

</CodeBlockConfig>

### Command options

- `-description=<string>` - The description to set on the role.
- `-grant-scope-id=<string>` - The scope ID for any grants set on the role.
- `-id=<string>` - The ID of the role you want to update.
- `-name=<string>` - The name to set on the role.
- `-version=<int>` - The version of the role you want to update.
If you do not specify a version, the command performs a check-and-set automatically.

@include 'cmd-option-note.mdx'